* Manage same picking/storage and output location

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Make inventory number always readonly
* Manage readonly state on Inventory Line
* Add lead time and transit location for internal shipments between warehouses

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Rename Shipments code into number
* Add number to inventories
* Add supplier and delivery address on supplier return shipment
* Add Python3 support
* Add do button on stock move form & list
* Add warehouse address on internal shipment

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Add drop location type
* Add buttons on stock move form & list
* Allow to use view location on staging and draft moves
* Add picking location on warehouse
* Always compute expected quantity in inventory
* Allow to change the destination of internal shipment's moves
* Allow to modify internal shipment moves in waiting state
* Compute inventory lines in complete_lines() using new grouping() method
* Allow to re-compute cost price
* Allow to change unit price of move done

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* Add 'staging' state to stock move
* Apply stock_assign of compute_quantity_query only on outgoing moves
* Add domain on location's parent and childs
* Do not filter out inactive products from stock computation

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Always succeed assignation from lost and found on internal shipments
* Remove return shipment out wizard

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)
* Add warning for moves without origin
* Allow to define the effective date of shipments
* Prevent changing product type if stock moves exist
* Use new methods to compute quantities in StockMixin._search_quantity()
* Split products_by_location into two methods on Move: